simplifying the dependencies making the application as a jar, and simple hello controller to verify the mvc config

--- a/simpleTaskManager-boot/build.gradle
+++ b/simpleTaskManager-boot/build.gradle
@@ -1,48 +1,38 @@
 buildscript {
-    ext {
-        springBootVersion = '1.3.0.RELEASE'
-    }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'spring-boot' 
-apply plugin: 'war'
+apply plugin: 'spring-boot'
 
-
-war {
+jar {
     baseName = 'simpleTaskManager-boot'
-    version = '0.0.1-SNAPSHOT'
+    version =  '0.1.0'
 }
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
-configurations {
-    providedRuntime
-}
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    runtime('com.h2database:h2')
-    runtime('mysql:mysql-connector-java')
-    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-    testCompile('org.springframework.boot:spring-boot-starter-test') 
+    compile("org.springframework.boot:spring-boot-starter-web")
+    // tag::actuator[]
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    // end::actuator[]
+    // tag::tests[]
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    // end::tests[]
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.7'
+    gradleVersion = '2.3'
 }
