integration of spring data with mysql + implementing simple create method

--- a/simpleTaskManager-boot/src/main/resources/application.properties
+++ b/simpleTaskManager-boot/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8090
+# spring.jackson.serialization.indent_output=true
+# spring.jackson.deserialization.fail_on_unknown_properties=true
