--- a/simpleTaskManager-boot/build.gradle
+++ b/simpleTaskManager-boot/build.gradle
@@ -31,6 +31,17 @@ dependencies {
     // tag::tests[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
     // end::tests[]
+
+    compile("org.springframework:spring-jdbc")
+    compile("org.springframework:spring-orm")
+    compile("org.springframework.data:spring-data-jpa")
+
+    compile("org.hibernate:hibernate-entitymanager")
+    compile("org.hibernate:hibernate-core")
+
+    compile("com.h2database:h2")
+    runtime("mysql:mysql-connector-java")
+    runtime("org.aspectj:aspectjweaver")
 }
 
 task wrapper(type: Wrapper) {
