--- a/simpleTaskManager-boot/pom.xml
+++ b/simpleTaskManager-boot/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>aspectjweaver</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- miscellaneous -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
