--- a/simpleTaskManager-boot/pom.xml
+++ b/simpleTaskManager-boot/pom.xml
@@ -32,6 +32,17 @@
         </dependency>
         <!-- end::tests[] -->
 
+        <!-- xml -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>woodstox-core-asl</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+
         <!-- persistence -->
         <dependency>
             <groupId>org.springframework</groupId>
